--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,10 +44,10 @@ body {
   &:nth-last-of-type(2) {
     margin-left: 18px;
   }
-  &:not(.occupied):hover {
+  &:not(.occupied):not(.selected):hover {
     background: green;
     cursor: pointer;
-    height: 1.05rem;
+    transform: scale(1.2);
   }
 }
 
@@ -64,13 +64,43 @@ body {
 }
 
 .showcase {
-  background: purple;
-  margin: 10px;
+  background: rgba(0, 0, 0, 0.1);
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: #777;
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   ul {
     display: flex;
-    text-align: center;
-    // margin: 10px;
-    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 10px;
+    small {
+      margin-left: 2px;
+    }
+  }
+}
+
+.container {
+  perspective: 100px;
+  margin-bottom: 30px;
+
+  .screen {
+    background: white;
+    height: 70px;
+    width: 100%;
+    margin: 15px 0;
+    transform: rotateX(-45);
+    box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7); //adds blur effect around edges.
+  }
+}
+
+p.text {
+  margin: 5px 0;
+  span {
+    color: #6feaf6;
   }
 }
 
