fixed the JS to fix span update display in UI

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,7 +3,7 @@
 * {
   box-sizing: border-box;
   margin: 0px;
-  padding: 0px;
+  // padding: 0px;
 }
 
 body {
@@ -31,36 +31,51 @@ body {
     // appearance: none;
   }
 }
-.seat {
-  background: #444451;
-  height: 12px;
-  width: 15px;
-  margin: 3px;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
-  &:nth-of-type(2) {
-    margin-right: 18px;
-  }
-  &:nth-last-of-type(2) {
-    margin-left: 18px;
-  }
-  &:not(.occupied):hover {
-    background: green;
-    cursor: pointer;
-    transform: scale(1.2);
-  }
-}
 
-.row {
-  display: flex;
-  flex-direction: row;
-}
+.container {
+  perspective: 1000px;
+  margin-bottom: 30px;
 
-.selected {
-  background: #6feaf6;
-}
-.occupied {
-  background: #fff;
+  .screen {
+    background: white;
+    height: 70px;
+    width: 100%;
+    margin: 15px 0;
+    transform: rotateX(-45deg);
+    box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7); //adds blur effect around edges.
+  }
+  .row {
+    display: flex;
+    // flex-direction: row;
+
+    .seat {
+      background: #444451;
+      height: 12px;
+      width: 15px;
+      margin: 3px;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
+
+      &.selected {
+        background: #6feaf6;
+      }
+      &.occupied {
+        background: #fff;
+      }
+
+      &:nth-of-type(2) {
+        margin-right: 18px;
+      }
+      &:nth-last-of-type(2) {
+        margin-left: 18px;
+      }
+      &:not(.occupied):hover {
+        // background: green;
+        cursor: pointer;
+        transform: scale(1.2);
+      }
+    }
+  }
 }
 
 .showcase {
@@ -70,37 +85,35 @@ body {
   color: #777;
   list-style-type: none;
   display: flex;
-  flex-direction: row;
+  // flex-direction: row;
   justify-content: space-between;
-  ul {
+
+  .seat {
+    &:not(.occupied):hover {
+      // background: green;
+      cursor: default;
+      transform: scale(1);
+    }
+  }
+
+  li {
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 0 10px;
+
     small {
       margin-left: 2px;
     }
   }
 }
 
-.container {
-  perspective: 100px;
-  margin-bottom: 30px;
-
-  .screen {
-    background: white;
-    height: 70px;
-    width: 100%;
-    margin: 15px 0;
-    transform: rotateX(-45);
-    box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7); //adds blur effect around edges.
-  }
-}
-
-p.text {
-  margin: 5px 0;
-  span {
-    color: #6feaf6;
+p {
+  &.text {
+    margin: 5px 0;
+    span {
+      color: #6feaf6;
+    }
   }
 }
 
